# pysnurr

./: .gitignore  Makefile  README.md  demo.py  pyproject.toml  spinner.py  test_spinner.py
.github/workflows/: tests.yml
examples/: demo.py
pysnurr/: __init__.py  spinner.py  terminal.py
tests/: test_spinner.py
