[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pysnurr"
version = "0.1.0"
description = "A beautiful terminal spinner library for Python"
requires-python = ">=3.7"
authors = [
    { name = "dewe" },
]

[tool.hatch.build.targets.wheel]
packages = ["pysnurr"] 